--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div class="row">
 					<div class="col-lg-12 my-auto">
 						<h1 class=" faded">			
-							<strong>My own Page</strong>
+							<strong>My own page</strong>
 						</h1>
 						<hr>		
 					</div>
@@ -35,7 +35,7 @@
 							<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 						    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3772a07f9b1bb4e1d0a1a2657_b5d6b7be22" tabindex="-1" value=""></div>
 						    
-						    <div class="clear"><input type="submit" value="Subscribe" name="Find out more" id="mc-embedded-subscribe" class="btn btn-primary btn-xl" class="button"></div>
+						    <div class="clear"><input type="submit" value="Find out more" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary btn-xl" class="button"></div>
 						    </div>
 						</form>
 						</div>
