--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	
 	<link href="https://fonts.googleapis.com/css?family=Sniglet" rel="stylesheet">
 
+	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 </head>
 	<body>
 
